Fix line-heights on smaller devices

--- a/public/app/css/styles.css
+++ b/public/app/css/styles.css
@@ -545,8 +545,7 @@ footer {
       font-size: 13px;
       font-size: 0.78615rem;
       line-height: 24px;
-      line-height: 1.5rem;
-      line-height: 1.25; }
+      line-height: 1.5rem; }
       footer .colophon, footer .social {
         margin-top: 16px;
         margin-top: 1rem;
