--- a/public/app/sass/layout/_footer.sass
+++ b/public/app/sass/layout/_footer.sass
@@ -47,7 +47,6 @@ footer
 
   +to($tablet)
     +font-size($tiny)
-    line-height: 1.25
     .colophon, .social
       +rem(margin-top, 1rem)
       +reset-columns
